--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <style>
-        p{
+        /* p{
             color: aqua;
             font-size: 40px;
         }
-    </style>
+    </style> */
     <title>Aula Html</title>
 </head>
 <body>
@@ -25,6 +25,11 @@
     <!-- 03 internal css -->
     <p>fui estilizado pelo internal</p>
     <p>fui estilizado pelo internal</p>
+    <!-- 04 external css-->
+    <p>
+
+        fui estilizado pelo esternal css 
+    </p>
 
 </body>
 </html>
