05 Ordem do css

--- a/index.html
+++ b/index.html
@@ -31,5 +31,17 @@
         fui estilizado pelo esternal css 
     </p>
 
+    /* 05 Ordem do css */
+
+    <hr>
+    <p style="color: #003;"> ordem do css</p>
+    <p>Ordem do css</p>
+
+    <ul>
+        <li>banana</li>
+        <li>maça</li>
+        <li>abacate</li>
+        </ul>
+
 </body>
 </html>
