--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/titles.css">
     <link rel="stylesheet" href="css/list.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         /* p{
             color: aqua;
             font-size: 40px;
         }
     </style> */
-    <title>Aula Html</title>
+    /* <title>Aula Html</title>
 </head>
 <body>
     <!-- Inline css -->
@@ -33,7 +35,7 @@
 
     /* 05 Ordem do css */
 
-    <hr>
+    /* <hr>
     <p style="color: #003;"> ordem do css</p>
     <p>Ordem do css</p>
 
@@ -42,6 +44,12 @@
         <li>maça</li>
         <li>abacate</li>
         </ul>
+         */ */
+        /* 07 desafio */
+        
+        <h4>
+            sou um desafio </h4>
+
 
 </body>
 </html>
