--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/list.css">
     <link rel="stylesheet" href="css/style.css">
     <style>
-        /* p{
+         p{
             color: aqua;
             font-size: 40px;
         }
-    </style> */
+    </style> 
     /* <title>Aula Html</title>
 </head>
 <body>
@@ -33,9 +33,9 @@
         fui estilizado pelo esternal css 
     </p>
 
-    /* 05 Ordem do css */
+     <!-- 05 Ordem do css */ -->
 
-    /* <hr>
+     <hr>
     <p style="color: #003;"> ordem do css</p>
     <p>Ordem do css</p>
 
@@ -44,11 +44,17 @@
         <li>maça</li>
         <li>abacate</li>
         </ul>
-         */ */
-        /* 07 desafio */
+         
+         <!-- 07 desafio */ -->
         
         <h4>
             sou um desafio </h4>
+
+            <!-- 08 classes -->
+            <p class="paragrah">Algum texto 01</p>
+            <p class="paragrah">Algum texto 02</p>
+            <p class="paragrah">Algum texto 03</p>
+
 
 
 </body>
