--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
                 titulo é exclusivo com id
             </h1>
 
+            <!-- 10 multiplas regras -->
+
+            <h2 id="algum-titulo" class="titulo">Algum texto 1</h2>
+            <h2 class="titulo">algum texto 2</h2>
+            <h2>algum texto 3</h2>
+
+
+
 
 
 </body>
